<resources>
    <string name="app_name">Cafe_Java</string>
    <string name="welcome_textview">Добро пожаловать в Java Cafe!</string>
    <string name="name_hint">Имя пользователя</string>
    <string name="password_hint">Пароль</string>
    <string name="sing_in_button">Войти</string>
    <string name="logo_cafe_description">Logo Cafe JAVA</string>
    <string name="greetings_textview">Привет, %s! Что желаете?</string>
    <string name="tea_radiobutton">Чай</string>
    <string name="coffee_radiobutton">Кофе</string>
    <string name="additives_textview">Что добавить в ваш %s?</string>
    <string name="sugar_checkbox">Сахар</string>
    <string name="milk_checkbox">Молоко</string>
    <string name="lemon_checkbox">Лимон</string>
    <string name="choose_drink_type_textview">Выберите тип напитка</string>
    <string name="make_order_button">Сделать заказ</string>
    <string name="name_textview">Имя:</string>
    <string name="drink_textview">Напиток:</string>
    <string name="type_drink_textview">Тип напитка:</string>
    <string name="additives_label_textview">Добавки:</string>
    <string name="error_fields_empty_toast">Пожалуйста, заполните все поля!</string>

    <array name="types_of_tea">
        <item>Зеленый</item>
        <item>Белый</item>
        <item>Черный</item>
    </array>

    <array name="types_of_coffee">
        <item>Американо</item>
        <item>Эспрессо</item>
        <item>Раф</item>
        <item>Латте</item>
    </array>
</resources>